crates/swc_ecma_react_compiler/tests/fixtures/upstream/error.bug-infer-mutation-aliasing-effects/error.txt
Found 1 error:

Invariant: [InferMutationAliasingEffects] Expected value kind to be initialized

<unknown> thunk$14.

error.bug-infer-mutation-aliasing-effects.ts:10:22
   8 |     function thunk(action) {
   9 |       if (typeof action === 'function') {
> 10 |         return action(thunk, () => stateRef.current, extraArg);
     |                       ^^^^^ this is uninitialized
  11 |       } else {
  12 |         dispatch(action);
  13 |         return undefined;
